--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
     }
   },
   "devDependencies": {
-    "@types/node": "^18.11.18",
-    "eslint": "^8.31.0",
-    "typescript": "^4.9.4"
+    "@types/node": "^20.17.25",
+    "eslint": "^8.57.1",
+    "typescript": "^5.8.2"
   },
   "dependencies": {
     "axios": "^1.2.2",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "rxjs": "^7.5.5"
   }
 }
